--- a/DatingApp/client/src/index.html
+++ b/DatingApp/client/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-slate-200 flex-align-middle ml-auto gap-3">
 <head>
   <meta charset="utf-8">
   <title>Client</title>
